# LazyBlog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/nextjs-receiver/: route.ts
sites/example/: prompt.md  site.toml  topics.csv
sites/sharpcall/: prompt.md  site.toml  topics.csv
src/lazyblog/: __init__.py  cli.py  config.py  deliver.py  generate.py  markdown.py  topics.py
tests/: test_lazyblog.py
